--- a/style.css
+++ b/style.css
@@ -5,23 +5,139 @@ padding: 0;
 
 .background_header{
     background: url("img/background_header.png");
-    min-height: 1080px;
+    height: 875px;
     min-width: 100%;
+    position: relative;
     
 }
- #navigation{
+ #navigation {
      color:white;
     width: 100%;
      list-style-type: none; 
      margin: 0;
      padding: 0;
-
+     border-bottom: solid;
+     color: #7d7d7d;
+     height: 113px;
  }
   ul{
      display: flex;
     justify-content: center;
+    align-items: center;
   }
   a{
       font-size: 20px;
       color: white;
-  }
+      margin: 20px;
+      text-decoration: none;
+      height: 116px;
+    align-content: center;}
+
+ .logo{
+    margin-right: 279px;
+    width: 20px;
+ }
+ 
+ .liste:hover{
+     border-bottom: solid;
+     color:#d21242 ;
+     align-content: center;
+     height: 116px;
+    
+ }
+
+ .le_titre_creatives{
+     position: absolute;
+     z-index: 1;
+     text-align: center;
+     width: 100%;
+     font-size:200px;
+    text-transform: uppercase;
+    color: white;
+ }
+ .scroll_down{
+    position: absolute;
+    z-index: 1;
+    text-align: center;
+    width: 100%;
+    font-size:10px;
+   color: white;
+   top:700px;
+ }
+ .fleche{
+    top: 752px;
+    position: absolute;
+    left: 781px;
+    width: 14px;
+}
+ .ellipse{
+    top: 735px;
+    position: absolute;
+    left: 766px;
+    width: 45px;
+ }
+ .we_are{
+     height:400px;
+     font-size: 50px;
+     width: 100%;
+    justify-content: center;
+     display: flex;
+     align-items: center;
+     text-transform: uppercase;
+     z-index: 2;
+     position:relative ;
+     color: white;
+    
+ }
+ .background_color_red{
+    background-color:#d21242 ;
+    height: 700px;
+ }
+ .w{
+     position: absolute;
+    top: 957px;
+    z-index: 2;
+    left: 674px;
+    height: 211px;
+    width: 221px;
+ }
+  h4{
+  text-transform: uppercase;
+ }
+.icone_one:before{
+content: url(img/icone_one.png);
+display: flex;
+justify-content: center;
+margin: 40px;
+
+ }
+ .icone_two:before{
+    content: url(img/icone_two.png);
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+}
+.icone_three:before{
+     content: url(img/icone_three.png);
+     display: flex;
+    justify-content: center;
+    margin: 40px;
+}
+.icone_four:before{
+    content: url(img/icone_four.png);
+    display: flex;
+    justify-content: center;
+    margin: 40px;}
+    
+.colone{
+    display: grid;
+    grid-template-columns:  15% 15% 15% 15% ;
+    text-align: center;
+    justify-content: center;
+}
+h4 {
+ color: white;
+}
+p{
+    color: white;
+}
