--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'gothamblack';
+    src: url('fonts/gotham-black-webfont.woff') format('woff'),
+         url('fonts/gotham-black-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 body{
 margin: 0;
 padding: 0;
@@ -19,6 +29,8 @@ padding: 0;
      border-bottom: solid;
      color: #7d7d7d;
      height: 113px;
+     font-family: 'gothamblack';
+   
  }
   ul{
      display: flex;
@@ -27,11 +39,13 @@ padding: 0;
   }
   a{
       font-size: 20px;
+      font-weight: normal;
       color: white;
       margin: 20px;
       text-decoration: none;
       height: 116px;
-    align-content: center;}
+    align-content: center;
+  }
 
  .logo{
     margin-right: 279px;
@@ -41,9 +55,7 @@ padding: 0;
  .liste:hover{
      border-bottom: solid;
      color:#d21242 ;
-     align-content: center;
-     height: 116px;
-    
+     height: 115px;
  }
 
  .le_titre_creatives{
@@ -57,7 +69,6 @@ padding: 0;
  }
  .scroll_down{
     position: absolute;
-    z-index: 1;
     text-align: center;
     width: 100%;
     font-size:10px;
@@ -87,7 +98,7 @@ padding: 0;
      z-index: 2;
      position:relative ;
      color: white;
-    
+    font-family: 'gothamblack';
  }
  .background_color_red{
     background-color:#d21242 ;
@@ -103,6 +114,7 @@ padding: 0;
  }
   h4{
   text-transform: uppercase;
+  font-family:" gothamblack";
  }
 .icone_one:before{
 content: url(img/icone_one.png);
@@ -141,3 +153,6 @@ h4 {
 p{
     color: white;
 }
+ .division{
+     padding: 10px;
+ }
