--- a/style.css
+++ b/style.css
@@ -1,158 +1,173 @@
 @font-face {
     font-family: 'gothamblack';
-    src: url('fonts/gotham-black-webfont.woff') format('woff'),
-         url('fonts/gotham-black-webfont.woff2') format('woff2');
+    src: url('fonts/gotham-black-webfont.woff2') format('woff2'),
+         url('fonts/gotham-black-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
-
-
 body{
 margin: 0;
 padding: 0;
+width: 100%;
+height: auto;
+
 }
 
-.background_header{
-    background: url("img/background_header.png");
+.background_header {
     height: 875px;
     min-width: 100%;
     position: relative;
-    
+    background-image: url(img/background_header.png);
 }
- #navigation {
-     color:white;
+.navigation {
     width: 100%;
-     list-style-type: none; 
-     margin: 0;
-     padding: 0;
-     border-bottom: solid;
-     color: #7d7d7d;
-     height: 113px;
-     font-family: 'gothamblack';
-   
- }
-  ul{
-     display: flex;
+    list-style-type: none;
+    color: rgb(125, 125, 125);
+    height: 113px;
+    font-family: gothamblack;
+    margin: 0px;
+    padding: 0px;
+    border-bottom: solid;
+}
+.menu{
+    display: none;
+}
+ul {
+    display: flex;
     justify-content: center;
     align-items: center;
-  }
-  a{
-      font-size: 20px;
-      font-weight: normal;
-      color: white;
-      margin: 20px;
-      text-decoration: none;
-      height: 116px;
-    align-content: center;
-  }
-
- .logo{
-    margin-right: 279px;
-    width: 20px;
- }
- 
- .liste:hover{
-     border-bottom: solid;
-     color:#d21242 ;
-     height: 115px;
- }
-
- .le_titre_creatives{
-     position: absolute;
-     z-index: 1;
-     text-align: center;
-     width: 100%;
-     font-size:200px;
-    text-transform: uppercase;
+}
+.logo {
+    
+    position: absolute;
+    top: 20px;
+    left: 50px;
+    
+}
+.le_titre_creatives {
+    position: absolute;
+    z-index: 1;
+    text-align: center;
+    width: 100%;
+    top: 40%;
+    font-size: 100Px;
+    text-transform:uppercase;
     color: white;
- }
- .scroll_down{
+    font-family: gothamblack;
+    
+}
+.ellipse{
+    display: block;
+    position: absolute;
+    top: 731px;
+    width: 100%;
+    text-align: center;
+}
+.scroll_down {
     position: absolute;
     text-align: center;
     width: 100%;
-    font-size:10px;
-   color: white;
-   top:700px;
- }
- .fleche{
-    top: 752px;
-    position: absolute;
-    left: 781px;
-    width: 14px;
+    font-size: 10px;
+    color: white;
+    top: 700px;
+    font-family: gothamblack;
 }
- .ellipse{
-    top: 735px;
-    position: absolute;
-    left: 766px;
-    width: 45px;
- }
- .we_are{
-     height:400px;
-     font-size: 50px;
-     width: 100%;
-    justify-content: center;
-     display: flex;
-     align-items: center;
-     text-transform: uppercase;
-     z-index: 2;
-     position:relative ;
-     color: white;
-    font-family: 'gothamblack';
- }
- .background_color_red{
-    background-color:#d21242 ;
+a{
+    font-size: 16px;
+    font-weight: normal;
+    color: white;
+    height: 116px;
+    align-content: center;
+    margin: 20px;
+    text-decoration: none;
+   
+    
+}
+a:hover{
+    border-bottom: solid #db5971;
+padding-bottom: 45px;
+color: #db5971;
+opacity: 0.80;
+transition: 0.5s;
+}
+h4:hover{
+    opacity: 0.50;
+}
+    
+.background_color_red {
+    background-color: rgb(210, 18, 66);
     height: 700px;
- }
- .w{
-     position: absolute;
-    top: 957px;
+}
+.we_are {
+    height: 400px;
+    font-size: 50px;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
     z-index: 2;
-    left: 674px;
-    height: 211px;
-    width: 221px;
- }
-  h4{
-  text-transform: uppercase;
-  font-family:" gothamblack";
- }
-.icone_one:before{
-content: url(img/icone_one.png);
-display: flex;
-justify-content: center;
-margin: 40px;
+    position: relative;
+    color: white;
+    font-family: gothamblack;
+}
+.w {
+    justify-content: center;
+    width: 100%;
+   position: absolute;
+   top: 890px;
+    z-index: 1;
+    text-transform: uppercase;
+    font-family: gothamblack;
+    color: #db5971;
+    font-size: 330px;
+   text-align: center;
+  
+}
 
- }
- .icone_two:before{
+.colone {
+    display: grid;
+    grid-template-columns: 15% 15% 15% 15%;
+    text-align: center;
+    justify-content: center;
+}
+
+h4 {
+    text-transform: uppercase;
+    font-family:  gothamblack;
+    color: white;
+}
+p {
+    display: block;
+   font-size: 10px;
+    font-family: gothamblack;
+    color: white;
+    line-height: 18px;
+   margin: 5px;
+    text-align: center;
+    align-content: center;
+}
+.icone_one::before {
+    content: url(img/icone_one.png);
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+}
+.icone_two::before {
     content: url(img/icone_two.png);
     display: flex;
     justify-content: center;
     margin: 40px;
 }
-.icone_three:before{
-     content: url(img/icone_three.png);
-     display: flex;
+.icone_three::before {
+    content: url(img/icone_three.png);
+    display: flex;
     justify-content: center;
     margin: 40px;
 }
-.icone_four:before{
+.icone_four::before {
     content: url(img/icone_four.png);
     display: flex;
     justify-content: center;
-    margin: 40px;}
-    
-.colone{
-    display: grid;
-    grid-template-columns:  15% 15% 15% 15% ;
-    text-align: center;
-    justify-content: center;
+    margin: 40px;
 }
-h4 {
- color: white;
-}
-p{
-    color: white;
-}
- .division{
-     padding: 10px;
- }
