--- a/style.css
+++ b/style.css
@@ -25,3 +25,107 @@ padding: 0;
       font-size: 20px;
       color: white;
   }
+  .main {
+    display:flex;
+    justify-content: space-between;
+    margin-right:5px;
+    border-radius: .5em;
+    padding: 10px;
+    margin: 10em;
+    text-align:center;
+    font-family: 'gothambook';
+}
+
+#slider{float: left; width:15%; height: auto;}
+
+
+.slider img{max-height:290px}
+
+#slider figure {
+  position: relative; 
+  width: 500%;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  text-align: left;
+  animation: 25s slidy infinite;
+}
+
+#slider figure img {
+
+width: 20%; height: auto; float: left; 
+
+}
+
+#slider { width: 93%; max-width: 1000px; overflow: hidden }
+
+@keyframes slidy {
+  0% { left: 0%; }
+  20% { left: 0%; }
+  25% { left: -100%; }
+  45% { left: -100%; }
+  50% { left: -200%; }
+  70% { left: -200%; }
+  75% { left: -300%; }
+  95% { left: -300%; }
+  100% { left: -400%; }
+}
+
+
+.zak{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #d21242;
+  height: 353px;
+  padding: 10px ;
+}
+.picture-left{
+  position: relative;
+  margin-left: 200px;
+}
+.ki {
+  position: absolute;
+  margin-left:300px;
+  text-align: left;
+
+}
+.picture-leftt{
+  position: relative;
+  margin-left: 650px;
+}
+.ka {
+  position: absolute;
+  margin-left:1020px;
+  text-align: left;
+
+}
+.sim{
+  display: flex;
+  align-items: center;
+  background-color: black;
+  height: 109px;
+  padding: 10px ;
+}
+.soh {
+  position: absolute;
+  margin-left:250px;
+  text-align: left;
+}
+.myr {
+  position: absolute;
+  margin-left:1200px;
+  text-align: left;
+}
+
+
+
+
+
+@font-face {
+  font-family: 'gothambook';
+  src: url('font/gothambook-webfont.woff2') format('woff2'),
+  url('font/gothambook-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
