--- a/style.css
+++ b/style.css
@@ -140,12 +140,12 @@ h4:hover{
     justify-content: center;
 }
 
-h4 {
+.titreh4 {
     text-transform: uppercase;
     font-family:  gothamblack;
     color: white;
 }
-p {
+.paragraphe {
     display: block;
    font-size: 10px;
     font-family: gothamblack;
