anais dernier commit

--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -16,3 +16,12 @@ display: block;
 .le_titre_creatives{
     top: 20%;
 }
+.colone{
+    display: block;
+    width:100%;
+}
+.paragraphe{
+   
+  text-align: center;
+   
+}
