--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@
     font-weight: normal;
     font-style: normal;
   }
+  @font-face {
+    font-family: 'gothamlight';
+    src: url('font/gothambook-webfont.woff2') format('woff2'),
+    url('font/gothambook-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
 
 
 body{
@@ -313,7 +320,7 @@ width: 20%; height: auto; float: left;
   .fulltext{
      width:50%;
       display: flex;
-    background-color: #222222;
+    background-color:#222222;
     color: white;
 flex-wrap: wrap;
 }
@@ -322,7 +329,6 @@ flex-wrap: wrap;
    width:50%; 
    height: 100%;
    overflow: hidden;
-  
 }
 
 .text2{
@@ -385,162 +391,4 @@ flex-wrap: wrap;
 
 
 
-@media screen and (min-width: 1024px) {
-     
-    #middle{
-        display:flex;
-        flex-wrap: wrap;
-    
-    }
-    .fulltext{
-        width:50%;
-         display: flex;
-       background-color: #222222;
-       color: white;
-   
-   }
-   
-   .box{
-      width:50%; 
-      height: 100%;
-      overflow: hidden;   
-   }
-   
-.text2{
-    font-family:'gothamlight';
-    margin-top: 70px;
-    margin-left: 110px;
 
-
-}
-.text3{
-    font-family: 'gothambook';
-    margin-top: 110px;
-    margin-left: -190px;
-    margin-bottom: 120px;
-    font-size: 25px;
-    text-transform: uppercase;
-}
-.text4{
-    font-family:'gothamlight' ;
-    margin-left: 110px;
-    margin-right: 110px;
-    margin-top: -120px;
-    line-height: 25px;
-}
-.fulltext2{
-    width:50%;
-      display: flex;
-    background-color: #f3f3f3;
-    color: #222222;
-
-flex-wrap: wrap;
-}
-.box2{
-    width:50%; 
-    overflow: hidden;
-}
-
-.grandb{
-    margin-top: 150px;
-    text-align: center;
-
-}
-.letsblog{
-    font-family: 'gothambook';
-    text-transform: uppercase;
-    margin-top: -148px;
-    font-size: 35px;
-    text-align: center;
-    justify-content: center;
-}
-.phrasefinish{
-    font-family:'gothambook';
-    text-align: center;
-    margin-top: 150px;
-    font-size: 25px;
-}
-}
-
-
-
-
-@media screen and (max-width: 815px) {
-    #middle{
-        display: flex;
-        flex-wrap: wrap;
-        display: initial;
-        
-    }
-    
-      .fulltext{
-         width:100%;
-          display: flex;
-        background-color: #222222;
-        color: white;
-    flex-wrap: wrap;
-    }
-    
-    .box{
-       width:50%; 
-       position: relative;
-    }
-    
-    .text2{
-        font-family:'gothamlight';
-        margin-top: 100px;
-        margin-left: 110px;
-    
-    
-    }
-    .text3{
-        font-family: 'gothambook';
-        margin-top: 130px;
-        margin-left: -190px;
-        margin-bottom: 70px;
-        font-size: 25px;
-        text-transform: uppercase;
-    }
-    .text4{
-        font-family:'gothamlight' ;
-        margin-left: 110px;
-        margin-right: 110px;
-        margin-top: -120px;
-        line-height: 25px;
-    }
-    
-    
-    
-    .fulltext2{
-        width:50%;
-          display: flex;
-        background-color: #f3f3f3;
-        color: #222222;
-    
-    flex-wrap: wrap;
-    }
-    .box2{
-        width:50%; 
-        overflow: hidden;
-    }
-    
-    .grandb{
-        margin-top: 150px;
-        text-align: center;
-    
-    }
-    .letsblog{
-        font-family: 'gothambook';
-        text-transform: uppercase;
-        margin-top: -148px;
-        font-size: 35px;
-        text-align: center;
-        justify-content: center;
-    }
-    .phrasefinish{
-        font-family:'gothambook';
-        text-align: center;
-        margin-top: 150px;
-        font-size: 25px;
-    }
-}
